--- a/examples/index.html
+++ b/examples/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>WebRTC Test</title>
+<meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
 <script src="bundle.js"></script>
