Added peer connection entry points

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,8 +2,21 @@
 <head>
 <title>WebRTC Test</title>
 <meta name="viewport" content="width=device-width, user-scalable=no">
+<style type="text/css">
+body {
+  margin: 0;
+}
+
+video.localVideo {
+  width: 320px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+</style>
 </head>
 <body>
+<video class="localVideo"></video>
 <script src="bundle.js"></script>
 </body>
 </html>
